--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,53 @@
   "homepage": "https://github.com/parallelam/ForSarahv2#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "class-validator": "^0.10.0",
     "cors": "^2.8.5",
+    "cross-env": "^5.2.1",
     "dotenv": "^8.1.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "http-errors": "^1.7.3",
     "mongodb": "^3.3.2",
-    "mongoose": "^5.6.11"
+    "mongoose": "^5.6.11",
+    "mysql2": "^1.7.0",
+    "node-zillow": "^2.0.0",
+    "passport": "^0.4.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.18.0",
+    "sequelize-typescript": "^1.0.0",
+    "supertest": "^4.0.2",
+    "typegoose": "^5.9.0",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/bluebird": "^3.5.27",
+    "@types/body-parser": "^1.17.1",
+    "@types/chai": "^4.2.0",
+    "@types/config": "0.0.34",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^6.1.1",
+    "@types/errorhandler": "0.0.32",
+    "@types/express": "^4.17.1",
+    "@types/mocha": "^5.2.7",
+    "@types/mongodb": "^3.3.1",
+    "@types/mongoose": "^5.5.16",
+    "@types/node": "^12.7.3",
+    "@types/supertest": "^2.0.8",
+    "@types/validator": "^10.11.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "mocha": "^6.2.0",
+    "mocha-typescript": "^1.1.17",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "ts-node": "^8.3.0",
+    "tsconfig-paths": "^3.8.0",
+    "typescript": "^3.6.2"
   }
 }
